# arp-workspace

./: AGENTS.md  README.md
arp-devkit/: README.md  build_backend.py  pyproject.toml
arp-devkit/adapters/: README.md
arp-devkit/adapters/claude-skills/: README.md
arp-devkit/adapters/common/: README.md  interfaces.md  lifecycle-hooks.md
arp-devkit/adapters/crewai/: README.md
arp-devkit/adapters/langgraph/: README.md
arp-devkit/adapters/openai-agents/: README.md
arp-devkit/adapters/openclaw/: README.md
arp-devkit/docs/: README.md
arp-devkit/examples/: README.md
arp-devkit/examples/agents/: content-agent.yaml  operations-agent.yaml  support-agent.yaml
arp-devkit/examples/demo_outputs/: sample_daily_report.json
arp-devkit/examples/docs/: example-design-principles.md  role-boundaries.md
arp-devkit/runtime/: README.md  build_backend.py  pyproject.toml
arp-devkit/runtime/src/arp_runtime/: __init__.py  cli.py  runtime.py
arp-devkit/runtime/src/arp_runtime/audit/: ledger.py
arp-devkit/runtime/src/arp_runtime/budget/: checker.py
arp-devkit/runtime/src/arp_runtime/escalation/: matcher.py
arp-devkit/runtime/src/arp_runtime/loader/: schema_loader.py
arp-devkit/runtime/src/arp_runtime/memory/: store.py
arp-devkit/runtime/src/arp_runtime/performance/: report.py
arp-devkit/runtime/src/arp_runtime/policy_engine/: authority_guard.py  decision.py  scope_guard.py
arp-devkit/runtime/src/arp_runtime/validator/: validator.py
arp-devkit/runtime/tests/: test_audit.py  test_authority_guard.py  test_budget.py  test_escalation.py  test_example_agents.py  test_reports.py  test_runtime_smoke.py  test_scope_guard.py
arp-devkit/scripts/: bootstrap.sh  smoke_test.sh  split_repos.md
arp-devkit/test-suite/: README.md  build_backend.py  pyproject.toml
arp-devkit/test-suite/docs/: certification-logic.md  compatibility-levels.md  test-categories.md
arp-devkit/test-suite/fixtures/: invalid_agent.yaml  valid_agent.yaml
arp-devkit/test-suite/schemas/: compliance-report.schema.json
arp-devkit/test-suite/src/arp_test_suite/: __init__.py  compatibility.py  loader.py  report.py  runner.py
arp-devkit/test-suite/tests/audit_tests/: test_audit_event_types.py  test_audit_fields.py  test_audit_on_block.py  test_audit_on_escalation.py
arp-devkit/test-suite/tests/behavior_tests/: test_approval_required_escalates_or_blocks.py  test_budget_exceeded.py  test_escalation_trigger.py  test_forbidden_action_block.py
arp-devkit/test-suite/tests/reporting_tests/: test_daily_report_format.py  test_report_required_fields.py
arp-devkit/test-suite/tests/schema_tests/: test_authority_required.py  test_identity_required.py  test_memory_required.py  test_scope_required.py
arp-registry/: README.md
arp-registry/certified/: sample-certified-project.json
arp-registry/compatible/: langgraph-example.json  openclaw-example.json
arp-registry/docs/: certification-process.md  recertification-policy.md  signature-model.md  trust-model.md
arp-registry/reports/: compliance-report.example.json  compliance-report.example.sig
arp-registry/schemas/: registry-entry.schema.json
arp-spec/: CONTRIBUTING.md  GOVERNANCE.md  README.md  build_backend.py  pyproject.toml
arp-spec/docs/: arp-adoption-guide.md  arp-vs-agent-frameworks.md  arp-vs-claude-skills.md  arp-vs-langgraph.md  arp-vs-openai-agents.md  arp-vs-openclaw.md  protocol-scope-and-non-goals.md
arp-spec/examples/: recruiting-agent.yaml  sales-agent.yaml
arp-spec/rfcs/: 0001-arp-protocol.md  0002-audit-ledger.md  0003-certification-model.md
arp-spec/schemas/: audit.schema.json
arp-spec/spec/: arp-1-identity.md  arp-2-scope.md  arp-3-authority.md  arp-4-escalation.md  arp-5-audit.md  arp-6-memory.md  arp-7-budget.md  arp-8-performance.md
arp-spec/src/arp_protocol/: __init__.py  version.py
arp-spec/src/arp_protocol/schemas/: arp.schema.json  report.schema.json
docs/: post-split-dependency-model.md  repo-split-plan.md
docs/split-guides/: README.md  arp-devkit.md  arp-registry.md  arp-spec.md
