[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "arp-protocol"
version = "0.1.0"
description = "Normative protocol specifications, schemas, and packaged assets for the Agent Responsibility Protocol (ARP)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "ARP Contributors" },
]
keywords = ["ai", "agents", "protocol", "governance", "schemas", "accountability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/example/agent-responsibility-protocol"
Repository = "https://github.com/example/agent-responsibility-protocol"
Issues = "https://github.com/example/agent-responsibility-protocol/issues"
