[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "arp-runtime"
version = "0.1.0"
description = "Lightweight reference runtime for the Agent Responsibility Protocol (ARP)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "ARP Contributors" },
]
dependencies = [
  "arp-protocol @ file:///workspace/arp-workspace/arp-spec",
]
keywords = ["arp", "agent-responsibility-protocol", "runtime", "governance", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/example/arp-runtime"
Repository = "https://github.com/example/arp-runtime"
Issues = "https://github.com/example/arp-runtime/issues"
