[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "arp-test-suite"
version = "0.1.0"
description = "Conformance and certification foundation for the Agent Responsibility Protocol (ARP)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "ARP Contributors" },
]
dependencies = [
  "arp-protocol @ file:///workspace/arp-workspace/arp-spec",
  "arp-runtime @ file:///workspace/arp-workspace/arp-devkit/runtime",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/example/arp-test-suite"
Repository = "https://github.com/example/arp-test-suite"
Issues = "https://github.com/example/arp-test-suite/issues"
